# aircraft-performance

./: .gitignore  Cargo.toml  README.md
prisma/: dev.db  schema.prisma
prisma-cli/: Cargo.toml
prisma/migrations/20240104183922_init/: migration.sql
src/: lib.rs  linear.rs  main.rs  quadratic.rs
src/performance/: linear.rs  mod.rs  quadratic.rs
src/prisma/: mod.rs  model.rs
