[package]
name = "aircraft-performance"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "prisma-cli",
]

[dependencies]
serde = { version = "1.0.194", features = ["derive"] }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.10", default-features = false, features = ["sqlite"] }
tokio = { version = "1.35.1", features = ["full"] }
uuid = { version = "1.6.1", features = ["v4"] }
